fixed the security vulnerabilities in the dependencies

--- a/package.json
+++ b/package.json
@@ -30,8 +30,15 @@
         "@sencha/ext-react": "^7.0.0",
         "@sencha/ext-react-renderercell": "^7.0.0",
         "@sencha/ext-react-transition": "^7.0.0",
-        "axios": "^0.18.0",
+        "axios": "^0.18.1",
+        "tar": "^2.2.2",
+        "fstream": "^1.0.12",
+        "lodash": "^4.17.12",
+        "lodash.mergewith": "^4.6.2",
+        "mixin-deep": "^1.3.2",
+        "set-value": "^2.0.1",
         "prop-types": "^15.6.2",
+        "serialize-javascript": "^2.1.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router-dom": "^5.1.2",
